implemented new ui elements and a new theme

--- a/index.html
+++ b/index.html
@@ -8,6 +8,43 @@
     <title>Rock Paper Scissors</title>
   </head>
   <body>
-    <h1>CHECK OUT THE CONSOLE</h1>
+    <div class="container">
+      <h1>Spongebob RPS</h1>
+
+      <div class="game-log">
+        <div class="player-wrapper">
+          <img class="player-img" src="/icons/plankton.png" alt="" />
+          <p id="human-score">Your Score: {}</p>
+        </div>
+
+        <!-- Human Choice -->
+        <img class="choice-img" src="icons/qm.png" alt="" />
+
+        <h2>DRAW</h2>
+
+        <!-- Human Choice -->
+        <img class="choice-img" src="icons/qm.png" alt="" />
+
+        <div class="player-wrapper">
+          <img class="player-img" src="/icons/karen.webp" alt="" />
+          <p id="computer-score">Computer Score: {}</p>
+        </div>
+      </div>
+
+      <div class="user-input">
+        <div class="input-button-wrapper rock">
+          <img src="icons/Rock.png" alt="" />
+          <p>Rock</p>
+        </div>
+        <div class="input-button-wrapper paper">
+          <img src="icons/Paper.png" alt="" />
+          <p>Paper</p>
+        </div>
+        <div class="input-button-wrapper scissors">
+          <img src="icons/Scissors.png" alt="" />
+          <p>Scissors</p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
