fixed ui elements moving while text in the middle changes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Spongebob RPS</h1>
+      <h1>RPS UNDERWATER</h1>
 
       <div class="game-log">
         <div class="player-wrapper">
@@ -24,7 +24,7 @@
           src="icons/qm.png"
           alt="" />
 
-        <h2>DRAW</h2>
+        <h2 id="round-result">DRAW</h2>
 
         <!-- Human Choice -->
         <img
