added display of scores as round progresses

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="game-log">
         <div class="player-wrapper">
           <img class="player-img" src="/icons/plankton.png" alt="" />
-          <p id="human-score">Your Score: {}</p>
+          <p>Your Score: <span id="human-score">0</span></p>
         </div>
 
         <!-- Human Choice -->
@@ -35,7 +35,7 @@
 
         <div class="player-wrapper">
           <img class="player-img" src="/icons/karen.webp" alt="" />
-          <p id="computer-score">Computer Score: {}</p>
+          <p>Computer Score: <span id="computer-score">0</span></p>
         </div>
       </div>
 
