--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>Rock Paper Scissors</title>
   </head>
   <body>
+    <div id="popup-window">
+      <h1>Hello</h1>
+      <button>Play Again!</button>
+    </div>
+
     <div class="container">
       <h1>RPS UNDERWATER</h1>
 
