Finished Popup window with logic

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           src="icons/qm.png"
           alt="" />
 
-        <h2 id="round-result">DRAW</h2>
+        <h2 id="round-result">PLAY</h2>
 
         <!-- Human Choice -->
         <img
