github pages images not showing fix

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       <div class="game-log">
         <div class="player-wrapper">
-          <img class="player-img" src="/icons/plankton.png" alt="" />
+          <img class="player-img" src="icons/plankton.png" alt="" />
           <p>Your Score: <span id="human-score">0</span></p>
         </div>
 
@@ -39,7 +39,7 @@
           alt="" />
 
         <div class="player-wrapper">
-          <img class="player-img" src="/icons/karen.webp" alt="" />
+          <img class="player-img" src="icons/karen.webp" alt="" />
           <p>Computer Score: <span id="computer-score">0</span></p>
         </div>
       </div>
